--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
-<app-menu></app-menu>
-<div class="main-container">
-  <router-outlet></router-outlet>
+<div class="page">
+  <app-menu></app-menu>
+  <div class="page__content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
