--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,10 @@
-<footer>
-  <hr/>
-  <img src="/assets/icons/pd-logo-144x144.png" alt="logo"/>
-  <p>PRODYNA SE - Conference App</p>
+<footer class="footer footer_centered">
+  <div class="footer__item_small"></div>
+  <div class="footer__item_large">
+    <span>
+      <img class="footer__image" src="/assets/icons/pd-logo-144x144.png" alt="logo"/>
+      PRODYNA SE - Conference App
+    </span>
+  </div>
+  <div class="footer__item_small"></div>
 </footer>
