page for conferences more or less completed

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,7 +3,7 @@
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item>
+    <button routerLink="/conferences" mat-menu-item>
       <mat-icon>people</mat-icon>
       <span>Conferences</span>
     </button>
