--- a/src/app/components/conferences/conferences.component.html
+++ b/src/app/components/conferences/conferences.component.html
@@ -1,9 +1,33 @@
-<div class="ui card claim-list">
-    <div class="content">
-      <div class="header">My conferences</div>
-    </div>
-    <div class="content">
-  
-        Conferences
-    </div>
-  </div>
+<mat-card>
+  <mat-card-title>
+    Search for conferences
+  </mat-card-title>
+  <mat-card-content>
+    <mat-form-field>
+      <mat-label>Year</mat-label>
+      <mat-select (selectionChange)="loadConferences($event)" [(value)]="year">
+        <mat-option *ngFor="let year of years" [value]="year">
+          {{year.getUTCFullYear()}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-card-content>
+</mat-card>
+<div *ngIf="conferences" >
+  <mat-card *ngFor="let conference of conferences.conferences">
+    <mat-card-title>
+      {{conference.name}}
+    </mat-card-title>
+    <mat-card-content>
+      <div>
+        <span>Time: {{conference.from}} - {{conference.to}}</span>
+      </div>
+      <div>
+        <button routerLink="/talk/{{conference.uuid}}" mat-menu-item>
+          <mat-icon>record_voice_over</mat-icon>
+          <span>To Talks</span>
+        </button>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
