--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,7 +11,7 @@
       <mat-icon>person</mat-icon>
       <span>Speaker</span>
     </button>
-    <button mat-menu-item>
+    <button routerLink="/talks" mat-menu-item>
       <mat-icon>record_voice_over</mat-icon>
       <span>Talks</span>
     </button>
