PAC-27 entities completed now

--- a/src/app/components/conferences/conferences.component.html
+++ b/src/app/components/conferences/conferences.component.html
@@ -41,6 +41,10 @@
           <mat-icon>record_voice_over</mat-icon>
           <span>To Talks</span>
         </button>
+        <button routerLink="/flyer/{{conference.id}}" mat-menu-item>
+          <mat-icon>list_alt</mat-icon>
+          <span>To Flyer</span>
+        </button>
       </div>
     </mat-card-content>
   </mat-card>
