PAC-30 talks can be added now

--- a/src/app/components/conferences/conferences.component.html
+++ b/src/app/components/conferences/conferences.component.html
@@ -28,7 +28,7 @@
   </mat-card-content>
 </mat-card>
 <div *ngIf="conferences" >
-  <mat-card *ngFor="let conference of conferences.conferences">
+  <mat-card *ngFor="let conference of conferences">
     <mat-card-title>
       {{conference.name}}
     </mat-card-title>
