--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,9 +11,9 @@
       <mat-icon>person</mat-icon>
       <span>Speaker</span>
     </button>
-    <button routerLink="/talks" mat-menu-item>
+    <button routerLink="/topics" mat-menu-item>
       <mat-icon>record_voice_over</mat-icon>
-      <span>Talks</span>
+      <span>Topics</span>
     </button>
     <button *ngIf="!loggedIn" (click)="login()" mat-menu-item>
       <mat-icon>lock_open</mat-icon>
