--- a/src/app/components/talks/talks.component.html
+++ b/src/app/components/talks/talks.component.html
@@ -1,43 +1,22 @@
-<mat-card>
-    <mat-card-title>
-      Search for talks
+<button mat-button routerLink="/topics/{{yearAndMonth}}">
+  <span>Back</span>
+</button>
+
+<div *ngIf="talks">
+  <mat-card *ngFor="let talk of talks; let i = index">
+    <mat-card-title *ngIf="talk.name">
+      {{i + 1}}. {{talk.name}}
     </mat-card-title>
     <mat-card-content>
-      <div class="form__row">
-        <mat-form-field class="form__field">
-          <mat-label>Year</mat-label>
-          <mat-select [(value)]="year">
-            <mat-option *ngFor="let year of years" [value]="year">
-              {{year.getUTCFullYear()}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-form-field class="form__field">
-          <mat-label>Month</mat-label>
-          <mat-select [(value)]="month">
-            <mat-option *ngFor="let month of months" [value]="month.month">
-              {{month.getDisplayValue()}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <div class="form__field">
-          <button mat-button (click)="loadTalks($event)">Go</button>
-        </div>
+      <div>
+        <span>Time: {{talk.from | date:'shortTime' }} - {{talk.to | date:'shortTime' }}</span>
+      </div>
+      <div>
+        <span>Speaker: {{talk.speaker.title}} {{talk.speaker.name}} ({{talk.speaker.company}})</span>
+      </div>
+      <div>
+        |<span *ngFor="let topic of talk.topics">&nbsp;{{topic}}&nbsp;|</span>
       </div>
     </mat-card-content>
   </mat-card>
-  <div *ngIf="talks" >
-    <mat-card *ngFor="let talks of talks.talks">
-      <mat-card-title>
-        {{talk.title}}
-      </mat-card-title>
-      <mat-card-content>
-        <div>
-          <span>Time: {{talk.from}} - {{talk.to}}</span>
-        </div>
-        <div *ngFor="let topic of talk.topics">
-          <span>{{talk.topic}}&nbsp;</span>
-        </div>
-      </mat-card-content>
-    </mat-card>
-  </div>
+</div>
