PAC-48 fix linter error

--- a/src/app/components/conferences/conferences.component.html
+++ b/src/app/components/conferences/conferences.component.html
@@ -12,7 +12,7 @@
       </mat-select>
     </mat-form-field>
     <div class="form__field">
-      <button mat-button (click)="loadConferences($event)">Go</button>
+      <button mat-button (click)="loadConferences()">Go</button>
     </div>
   </mat-card-content>
 </mat-card>
