added location name

--- a/src/app/components/conferences/conferences.component.html
+++ b/src/app/components/conferences/conferences.component.html
@@ -19,7 +19,7 @@
 <div *ngIf="conferences">
   <mat-card *ngFor="let conference of conferences">
     <mat-card-title>
-      {{conference.name}}
+      {{conference.name}} ({{conference.location.name}})
     </mat-card-title>
     <mat-card-content>
       <div>
