--- a/src/app/components/conferences/conferences.component.html
+++ b/src/app/components/conferences/conferences.component.html
@@ -26,6 +26,10 @@
         <span>Time: {{formatDate(conference.from)}} - {{formatDate(conference.to)}}</span>
       </div>
       <div>
+        <button routerLink="/talks/conference/{{conference.id}}" mat-menu-item>
+          <mat-icon>record_voice_over</mat-icon>
+          <span>To Talks</span>
+        </button>
         <button routerLink="/flyer/{{conference.id}}" mat-menu-item>
           <mat-icon>list_alt</mat-icon>
           <span>To Flyer</span>
